# Numa

./: .gitignore  README.md
.github/workflows/: tests.yml
tauri-app/: .eslintrc.json  ACCESSIBILITY.md  CARGO_FEATURES.md  CLAUDE.md  CSP_SECURITY.md  DEVELOPMENT.md  OBSERVABILITY.md  OBSERVABILITY_IMPROVEMENTS.md  PRIVACY_STORAGE.md  README.md  SECURITY.md  STEALTH_OBSERVABILITY_RULES.md  TESTING.md  commitlint.config.js  env.example  eslint.config.js  index.html  optimization-roadmap.md  optimize-assets.sh  optimize-deps.sh  package-lock.json  package.json  performance-test.sh  playwright.config.ts  svgo.config.js  tailwind.config.js  test-all.sh  test.sh  vite.config.ts  vitest.config.ts
tauri-app/.github/workflows/: rust-security.yml  security.yml
tauri-app/playwright-report/: index.html
tauri-app/src/: App.tsx  AppWithRouter.tsx  config.ts  index.css  main.tsx  mainhud.html
tauri-app/src-tauri/: Cargo.toml  build-config.json  csp.json  deny.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json  main.json  overlay.json
tauri-app/src-tauri/plugins/liquid_glass/: Cargo.toml
tauri-app/src-tauri/plugins/liquid_glass/src/: lib.rs
tauri-app/src-tauri/plugins/liquid_glass/src/macos/: liquid_glass.rs
tauri-app/src-tauri/src/: csp_manager.rs  errors.rs  lib.rs  logging.rs  main.rs  ns_panel.rs  openai.rs  stealth.rs  tests.rs  validation.rs
tauri-app/src-tauri/src/platform/: macos.rs  mod.rs  stub.rs
tauri-app/src/components/: ActivityContent.tsx  ActivityItem.tsx  AlertsPanel.tsx  AnimatedTabContent.tsx  ApiConfig.tsx  CSPManager.tsx  ChatInterface.tsx  DropdownPanel.tsx  ErrorBoundary.tsx  FloatingBubble.tsx  HUDBar.tsx  HubBar.tsx  LazyComponents.tsx  LiquidGlassLens.tsx  LiquidGlassTest.tsx  LoadingSpinner.tsx  MetricsDashboard.tsx  Onboarding.tsx  OverlayHUD.tsx  PersonalizeContent.tsx  PrivacyConsent.tsx  PrivacyManager.tsx  PromptCard.tsx  SettingsContent.tsx  SettingsTab.tsx  Sidebar.tsx  SplitHUDBar.tsx  StealthControl.tsx
tauri-app/src/components/DropdownPanel/: CaptureTab.tsx  PanelHeader.tsx  PanelSidebar.tsx
tauri-app/src/components/HUDBar/: AskButton.tsx  AskZone.tsx  CaptureButton.tsx  CloseButton.tsx  InputField.tsx  TogglePanelButton.tsx
tauri-app/src/components/__tests__/: DropdownPanel.test.tsx  HUDBar.test.tsx  LoadingSpinner.test.tsx
tauri-app/src/components/examples/: HubBar.tsx
tauri-app/src/components/ui/: AccessibleButton.tsx  GlassButton.tsx  (+6 more)
tauri-app/src/data/: activitiesData.ts
tauri-app/src/hooks/: useAccessibility.ts  useDelayedObservability.ts  useDraggablePage.ts  useKeyboardNavigation.ts  useLiquidGlass.ts  useOptimizedPerformance.ts  usePWA.ts  usePerformance.ts  useSnapHalo.ts  useStealthObservability.ts  useTheme.ts
tauri-app/src/lib/: overlay.ts
tauri-app/src/pages/: BlankPage.tsx  ContextPage.tsx  InputPage.tsx  InputPageFixed.tsx  InputPageSimple.tsx  ListenPage.tsx  MainHUDPage.css  MainHUDPage.tsx  OverlayPage.tsx  PanelPage.tsx  ResponsePage.tsx
tauri-app/src/styles/: accessibility-fixed.css  accessibility.css  glass.css  mainhud.css
tauri-app/src/test/: setup.ts
tauri-app/src/utils/: alerts.ts  api.ts  commands.ts  cspManager.ts  errorReporting.ts  errorTracker.ts  example.ts  liquidGlass.ts  logger.ts  metrics.ts  privacyManager.ts  rateLimiter.ts  secureStorage.ts  storage.ts  tauriClient.ts  validation.ts
tauri-app/test-results/: .last-run.json
tauri-app/test-results/app-Numa-Application-E2E-T-380a0-uld-handle-data-persistence-chromium/: video.webm
tauri-app/test-results/app-Numa-Application-E2E-T-6c727-andle-capture-functionality-chromium/: video.webm
tauri-app/test-results/app-Numa-Application-E2E-T-d73cd-igate-between-tabs-in-panel-chromium/: video.webm
tauri-app/test-results/app-Numa-Application-E2E-T-db510-ld-handle-responsive-design-chromium/: video.webm
tauri-app/test-results/app-Numa-Application-E2E-Tests-should-handle-error-states-chromium/: video.webm
tauri-app/test-results/app-Numa-Application-E2E-Tests-should-handle-theme-switching-chromium/: video.webm
tauri-app/test-results/performance-Performance-E2-0c4f4-ould-have-smooth-animations-chromium/: video.webm
tauri-app/test-results/performance-Performance-E2-3df3f--have-efficient-bundle-size-chromium/: video.webm
tauri-app/test-results/performance-Performance-E2-6a0a7-rent-operations-efficiently-chromium/: video.webm
tauri-app/test-results/performance-Performance-E2-c60ec-id-interactions-without-lag-chromium/: video.webm
tauri-app/tests/e2e/: alerts.spec.ts  app.spec.ts  performance.spec.ts
(+7 files in other folders)
