[package]
name = "tauri-app"
version = "0.1.0"
description = "Numa - AI Assistant with stealth mode"
authors = ["martinet"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rmymartinet/Numa"
keywords = ["tauri", "ai", "assistant", "desktop"]
categories = ["desktop-application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7", features = ["macos-private-api", "test"] }
tauri-plugin-opener = "2"
# tauri-plugin-global-shortcut = "2"  # Temporairement désactivé - API instable
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
url = "2"
tauri-utils = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
keyring = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.23"
cocoa = "0.25"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"


