[package]
name = "tauri-app"
version = "0.1.0"
description = "Numa - AI Assistant with stealth mode"
authors = ["martinet"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rmymartinet/Numa"
keywords = ["tauri", "ai", "assistant", "desktop"]
categories = ["desktop-application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri de base - PAS de features par défaut, gérées via [features]
tauri = { version = "2.7", features = [] }
tauri-plugin-opener = "2"
# tauri-plugin-global-shortcut = "2"  # Temporairement désactivé - API instable
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
url = "2"
tauri-utils = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
keyring = "2.0"
once_cell = "1.20"

# Dépendances conditionnelles selon les features
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging"] }

# API privées macOS - seulement si feature stealth_macos activée
[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2", optional = true }
core-graphics = { version = "0.23", optional = true }
cocoa = { version = "0.25", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"

# Features pour isoler les environnements et API privées
[features]
# Production par défaut : inclut le mode furtif pour macOS
default = ["stealth_macos"]

# Développement : active les chemins de test et logs verbeux
dev = ["tauri/test", "stealth_macos"]

# macOS : active l'usage d'API privées macOS (uniquement si build macOS)
stealth_macos = ["tauri/macos-private-api", "objc", "core-graphics", "cocoa"]

# Debug : logs très verbeux et outils de debug
debug = ["dev", "tracing-subscriber/ansi"]

# Production sécurisée : sans API privées (pour distribution)
secure = []


