[package]
name = "liquid_glass"
version = "0.1.0"
edition = "2021"

[lib]
name = "liquid_glass"
crate-type = ["staticlib", "cdylib"]

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"
